infrastructure/k8s/tasks-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasks-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasks
  template:
    metadata:
      labels:
        app: tasks
    spec:
      containers:
        - name: tasks
          image: sphamandla38/task:latest
