infrastructure/k8s/events-bus-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: event-bus-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: events-bus
  ports:
    - name: events-bus
      protocol: TCP
      port: 3015
      targetPort: 3015
