infrastructure/k8s/tasks-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: tasks-srv
spec:
  type: NodePort
  selector:
    app: tasks
  ports:
    - name: tasks
      protocol: TCP
      port: 3010
      targetPort: 3010

---
apiVersion: v1
kind: Service
metadata:
  name: tasks-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: tasks
  ports:
    - name: tasks
      protocol: TCP
      port: 3010
      targetPort: 3010
